--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 standard dummy text ever since the 1500s, when an unknown
                 printer took a galley of type and scrambled it to make a type
                 specimen book.</p>
-                <a class="link-button" href="images/Samia Sultana.pdf">Download CV</a>
+                <a class="link-button" href="images/Samia Sultana.pdf" download="CV">Download CV</a>
         </div>
     </section>
 
@@ -76,11 +76,7 @@
         </div>
     </section>
 
+    
 
-    <section class="inq">
-        <h1>WORK INQUIRY</h1>
-        <img src="shapes/Group_33094_1.png" alt="">
-
-    </section>
 </body>
 </html>
